--- a/web/index.html
+++ b/web/index.html
@@ -52,13 +52,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#services">How works?</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#portfolio">Games view</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#about">Games list</a>
+              <a class="nav-link" href="#contact">Admin</a>
             </li>
           </ul>
         </div>
@@ -72,7 +66,13 @@
           We got a lot of recomendations for you
         </div>
         <a class="btn btn-primary btn-xl text-uppercase" href="#services"
-          >Admin</a
+          >User</a
+        >
+        <a class="btn btn-primary btn-xl text-uppercase" href="#portfolio"
+          >Games view</a
+        >
+        <a class="btn btn-primary btn-xl text-uppercase" href="#gameList"
+          >Games list</a
         >
       </div>
     </header>
@@ -305,7 +305,7 @@
       </div>
     </section>
     <!-- About-->
-    <section class="page-section" id="about">
+    <section class="page-section" id="gameList">
       <div class="container">
         <div class="text-center">
           <h2 class="section-heading text-uppercase">Games list</h2>
@@ -420,165 +420,14 @@
         </ul>
       </div>
     </section>
-    <!-- Team-->
-    <section class="page-section bg-light" id="team">
-      <div class="container">
-        <div class="text-center">
-          <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-          <h3 class="section-subheading text-muted">
-            Lorem ipsum dolor sit amet consectetur.
-          </h3>
-        </div>
-        <div class="row">
-          <div class="col-lg-4">
-            <div class="team-member">
-              <img
-                class="mx-auto rounded-circle"
-                src="assets/img/team/1.jpg"
-                alt="..."
-              />
-              <h4>Parveen Anand</h4>
-              <p class="text-muted">Lead Designer</p>
-              <a
-                class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Parveen Anand Twitter Profile"
-                ><i class="fab fa-twitter"></i
-              ></a>
-              <a
-                class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Parveen Anand Facebook Profile"
-                ><i class="fab fa-facebook-f"></i
-              ></a>
-              <a
-                class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Parveen Anand LinkedIn Profile"
-                ><i class="fab fa-linkedin-in"></i
-              ></a>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="team-member">
-              <img
-                class="mx-auto rounded-circle"
-                src="assets/img/team/2.jpg"
-                alt="..."
-              />
-              <h4>Diana Petersen</h4>
-              <p class="text-muted">Lead Marketer</p>
-              <a
-                class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Diana Petersen Twitter Profile"
-                ><i class="fab fa-twitter"></i
-              ></a>
-              <a
-                class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Diana Petersen Facebook Profile"
-                ><i class="fab fa-facebook-f"></i
-              ></a>
-              <a
-                class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Diana Petersen LinkedIn Profile"
-                ><i class="fab fa-linkedin-in"></i
-              ></a>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="team-member">
-              <img
-                class="mx-auto rounded-circle"
-                src="assets/img/team/3.jpg"
-                alt="..."
-              />
-              <h4>Larry Parker</h4>
-              <p class="text-muted">Lead Developer</p>
-              <a
-                class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Larry Parker Twitter Profile"
-                ><i class="fab fa-twitter"></i
-              ></a>
-              <a
-                class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Larry Parker Facebook Profile"
-                ><i class="fab fa-facebook-f"></i
-              ></a>
-              <a
-                class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Larry Parker LinkedIn Profile"
-                ><i class="fab fa-linkedin-in"></i
-              ></a>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-8 mx-auto text-center">
-            <p class="large text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut
-              eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam
-              corporis ea, alias ut unde.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Clients-->
-    <div class="py-5">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-md-3 col-sm-6 my-3">
-            <a href="#!"
-              ><img
-                class="img-fluid img-brand d-block mx-auto"
-                src="assets/img/logos/microsoft.svg"
-                alt="..."
-                aria-label="Microsoft Logo"
-            /></a>
-          </div>
-          <div class="col-md-3 col-sm-6 my-3">
-            <a href="#!"
-              ><img
-                class="img-fluid img-brand d-block mx-auto"
-                src="assets/img/logos/google.svg"
-                alt="..."
-                aria-label="Google Logo"
-            /></a>
-          </div>
-          <div class="col-md-3 col-sm-6 my-3">
-            <a href="#!"
-              ><img
-                class="img-fluid img-brand d-block mx-auto"
-                src="assets/img/logos/facebook.svg"
-                alt="..."
-                aria-label="Facebook Logo"
-            /></a>
-          </div>
-          <div class="col-md-3 col-sm-6 my-3">
-            <a href="#!"
-              ><img
-                class="img-fluid img-brand d-block mx-auto"
-                src="assets/img/logos/ibm.svg"
-                alt="..."
-                aria-label="IBM Logo"
-            /></a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Contact-->
+    
+    <!-- Add-->
     <section class="page-section" id="contact">
       <div class="container">
         <div class="text-center">
-          <h2 class="section-heading text-uppercase">Contact Us</h2>
+          <h2 class="section-heading text-uppercase">Add a game</h2>
           <h3 class="section-subheading text-muted">
-            Lorem ipsum dolor sit amet consectetur.
+            Here you can add a game as an Admin.
           </h3>
         </div>
         <!-- * * * * * * * * * * * * * * *-->
@@ -597,7 +446,7 @@
                   class="form-control"
                   id="name"
                   type="text"
-                  placeholder="Your Name *"
+                  placeholder="Game name"
                   data-sb-validations="required"
                 />
                 <div class="invalid-feedback" data-sb-feedback="name:required">
@@ -605,76 +454,46 @@
                 </div>
               </div>
               <div class="form-group">
-                <!-- Email address input-->
+                <!-- Name input-->
                 <input
                   class="form-control"
-                  id="email"
-                  type="email"
-                  placeholder="Your Email *"
-                  data-sb-validations="required,email"
+                  id="name"
+                  type="text"
+                  placeholder="Game genre"
+                  data-sb-validations="required"
                 />
-                <div class="invalid-feedback" data-sb-feedback="email:required">
-                  An email is required.
-                </div>
-                <div class="invalid-feedback" data-sb-feedback="email:email">
-                  Email is not valid.
+                <div class="invalid-feedback" data-sb-feedback="name:required">
+                  A genre is required.
                 </div>
               </div>
-              <div class="form-group mb-md-0">
-                <!-- Phone number input-->
+              <div class="form-group">
+                <!-- Name input-->
                 <input
                   class="form-control"
-                  id="phone"
-                  type="tel"
-                  placeholder="Your Phone *"
+                  id="name"
+                  type="text"
+                  placeholder="Game release"
                   data-sb-validations="required"
                 />
-                <div class="invalid-feedback" data-sb-feedback="phone:required">
-                  A phone number is required.
+                <div class="invalid-feedback" data-sb-feedback="name:required">
+                  A date is required.
                 </div>
               </div>
-            </div>
-            <div class="col-md-6">
-              <div class="form-group form-group-textarea mb-md-0">
-                <!-- Message input-->
-                <textarea
-                  class="form-control"
-                  id="message"
-                  placeholder="Your Message *"
-                  data-sb-validations="required"
-                ></textarea>
-                <div
-                  class="invalid-feedback"
-                  data-sb-feedback="message:required"
-                >
-                  A message is required.
+              <div class="form-group">
+                <div class="form-group">
+                  <!-- Name input-->
+                  <input
+                    class="form-control"
+                    id="name"
+                    type="text"
+                    placeholder="Game score"
+                    data-sb-validations="required"
+                  />
+                  <div class="invalid-feedback" data-sb-feedback="name:required">
+                    A score is required.
+                  </div>
                 </div>
-              </div>
-            </div>
-          </div>
-          <!-- Submit success message-->
-          <!---->
-          <!-- This is what your users will see when the form-->
-          <!-- has successfully submitted-->
-          <div class="d-none" id="submitSuccessMessage">
-            <div class="text-center text-white mb-3">
-              <div class="fw-bolder">Form submission successful!</div>
-              To activate this form, sign up at
-              <br />
-              <a href="https://startbootstrap.com/solution/contact-forms"
-                >https://startbootstrap.com/solution/contact-forms</a
-              >
-            </div>
-          </div>
-          <!-- Submit error message-->
-          <!---->
-          <!-- This is what your users will see when there is-->
-          <!-- an error submitting the form-->
-          <div class="d-none" id="submitErrorMessage">
-            <div class="text-center text-danger mb-3">
-              Error sending message!
-            </div>
-          </div>
+                <div class="form-group">
           <!-- Submit Button-->
           <div class="text-center">
             <button
